@@ -75,6 +75,7 @@ COMMON_SDCC = \
   _strcspn.c \
   _strncat.c \
   _strncmp.c \
+  strxfrm.c \
   _strncpy.c \
   _strpbrk.c \
   _strrchr.c \
